# modorganizer-diagnose_case-sensitive-fs

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
src/: CMakeLists.txt  diagnose_case-sensitive-fs.cpp  diagnose_case-sensitive-fs.h  diagnose_case-sensitive-fs_en.ts
